Limit long-distance programmatic scroll curves to 3 seconds.

Currently, the duration of programmatic smooth scroll curves depend on
the distance of the scroll delta. However, it could be considerably long
for long pages.

This patch sets an upper-limit of 3 seconds for the programmatic smooth
scrolls. For shorter scrolls, the duration would still be related to the
delta.

Bug: 852549
Change-Id: Idbb95a15b7440a16c3e3632f063daa7b7e8fe705
Reviewed-on: https://chromium-review.googlesource.com/c/1396493
Commit-Queue: David Bokan <bokan@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620111}
Former-commit-id: ce9b54be312c4ebc1872989627a2f53d36503cf1